# Compiler-Integrated_MPI_Usage_Sanitizer

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  WORKFLOW_AND_ARCHITECTURE.md  build.sh  run.sh  run_custom.sh  test  test.c
dashboard/: README.md  app.py
scripts/: build.sh  run.sh
src/pass/: MPISanitizerPass.cpp  MPISanitizerPass.h
src/runtime/: mpisan_rt.c  mpisan_rt.h
testcases/: first  first.c  miniapp_heat1d_buggy.c  miniapp_heat1d_clean.c  second  second.c  t01_correct_pingpong.c  t02_type_mismatch.c  t03_count_mismatch.c  t04_deadlock.c  t05_buffer_alias.c  t06_collective_mismatch.c  t07_null_buffer.c  t08_leaked_request.c  t09_correct_nonblocking.c  t10_correct_allreduce.c  t11_allreduce_type_mismatch.c  t12_correct_scatter_gather.c  t13_tag_mismatch.c  t14_allreduce_alias.c  t15_correct_barrier_bcast.c  t16_float_int_confusion.c  t17_correct_waitall.c
